--- a/index.css
+++ b/index.css
@@ -98,10 +98,6 @@
 }
 body {
   position: relative;
-  -webkit-animation-name: fadein-fancy;
-          animation-name: fadein-fancy;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
   background-image: url(./img/background-photo.jpeg);
   background-attachment: fixed;
   background-size: cover;
@@ -143,21 +139,27 @@ footer {
   position: relative;
   bottom: 0;
   max-width: 900px;
-  background-position: top;
-  background-repeat: no-repeat;
-  background-color: black;
   color: white;
   background-color: white;
-  overflow: hidden;
-  flex: 0 0 100%;
   scroll-snap-align: start;
-  border-radius: 5px;
   margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
   transition: height 0.5s, bottom 0.5s;
   scroll-snap-align: center;
+  -webkit-animation-name: fadein-fancy;
+          animation-name: fadein-fancy;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+}
+
+.item-inner {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-position: top;
+  background-repeat: no-repeat;
 }
 
 .card {
@@ -174,6 +176,10 @@ footer {
   min-height: 400px;
   text-align: center;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
+  -webkit-animation-name: fadein-fancy;
+          animation-name: fadein-fancy;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
 }
 
 .icon {
@@ -235,6 +241,10 @@ h1 {
   color: white;
   text-align: center;
   text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
+  -webkit-animation-name: fadein-fancy;
+          animation-name: fadein-fancy;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
 }
 
 .card p {
@@ -278,7 +288,7 @@ button {
   position: relative;
   z-index: 3;
   top: 200px;
-  background-color: rgba(0, 0, 0, 0.719);
+  background-color: black;
   transition: opacity 0.5s, top 0.5s, transform 0.5s;
 }
 
@@ -389,16 +399,14 @@ button {
   height: 400px;
   margin-left: auto;
   margin-right: auto;
-  max-width: 800px;
   padding-left: 20px;
   padding-right: 20px;
   position: relative;
-  top: 300px;
+  top: 320px;
   left: 0;
   z-index: 2;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.719);
-  border-radius: 5px;
 }
 
 ::-webkit-scrollbar {
