--- a/index.scss
+++ b/index.scss
@@ -67,8 +67,6 @@ $expandedheight: 800px;
 
 body {
     position: relative;
-    animation-name: fadein-fancy;
-    animation-duration: 1s;
     background-image: url(./img/background-photo.jpeg);
     background-attachment: fixed;
     background-size: cover;
@@ -109,21 +107,25 @@ footer {
     position: relative;
     bottom: 0;
     max-width: $itemwidth;
-    background-position: top;
-    background-repeat: no-repeat;
-    background-color: black;
     color: white;
     background-color: white;
-    overflow: hidden;
-    flex: 0 0 100%;
     scroll-snap-align: start;
-    border-radius: 5px;
     margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.50);
     transition: height 0.5s, bottom 0.5s;
     scroll-snap-align: center;
+    animation-name: fadein-fancy;
+    animation-duration: 1s;
+}
+
+.item-inner {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-position: top;
+    background-repeat: no-repeat;
 }
 
 .card {
@@ -140,6 +142,8 @@ footer {
     min-height: $cardheight;
     text-align: center;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.50);
+    animation-name: fadein-fancy;
+    animation-duration: 1s;
 }
 
 .icon {
@@ -194,6 +198,8 @@ h1 {
     color: white;
     text-align: center;
     text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.50);
+    animation-name: fadein-fancy;
+    animation-duration: 1s;
 }
 
 .card p {
@@ -237,7 +243,7 @@ button {
     position: relative;
     z-index: 3;
     top: $itemheight - $dropdownheight;
-    background-color: rgba(0, 0, 0, 0.719);  
+    background-color: black; 
     //backdrop-filter: blur(5px);
     transition: opacity 0.5s, top 0.5s, transform 0.5s;
 }
@@ -349,17 +355,15 @@ button {
     height: $descheight;
     margin-left: auto;
     margin-right: auto;
-    max-width: 800px;
     padding-left: 20px;
     padding-right: 20px;
     position: relative;
-    top: $expandedheight - $descheight - $dropdownheight * 2 - 20px;
+    top: $expandedheight - $descheight - $dropdownheight * 2;
     left: 0;
     z-index: 2;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.719);  
     //backdrop-filter: blur(5px);
-    border-radius: 5px;
 
 } 
 
