--- a/index.css
+++ b/index.css
@@ -157,6 +157,8 @@ footer {
 .item-inner {
   width: 100%;
   height: 100%;
+  outline: solid black 2px;
+  outline-offset: -2px;
   overflow: hidden;
   background-position: top;
   background-repeat: no-repeat;
@@ -193,6 +195,11 @@ footer {
 .decor {
   position: absolute;
   z-index: -1;
+  pointer-events: none;
+}
+
+.item .decor {
+  z-index: 3;
 }
 
 .decor.bl {
@@ -245,6 +252,7 @@ h1 {
           animation-name: fadein-fancy;
   -webkit-animation-duration: 1s;
           animation-duration: 1s;
+  position: relative;
 }
 
 .card p {
