--- a/index.scss
+++ b/index.scss
@@ -123,6 +123,8 @@ footer {
 .item-inner {
     width: 100%;
     height: 100%;
+    outline: solid black 2px;
+    outline-offset: -2px;
     overflow: hidden;
     background-position: top;
     background-repeat: no-repeat;
@@ -153,11 +155,15 @@ footer {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
 .decor {
     position: absolute;
     z-index: -1;
+    pointer-events: none;
 }
-
+.item .decor {
+    z-index: 3;
+}
 .decor.bl {
     bottom: -44px;
     left: -64px;
@@ -200,6 +206,7 @@ h1 {
     text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.50);
     animation-name: fadein-fancy;
     animation-duration: 1s;
+    position: relative;
 }
 
 .card p {
