--- a/index.scss
+++ b/index.scss
@@ -65,6 +65,11 @@ $expandedheight: 800px;
     to { opacity: 0%; }
 }
 
+
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     position: relative;
     background-image: url(./img/background-photo.jpeg);
@@ -72,7 +77,6 @@ body {
     background-size: cover;
     font-family: $fontfamily1;
     scroll-behavior: smooth;
-    overflow-x: hidden;
 }
 
 footer {
