--- a/public/index.scss
+++ b/public/index.scss
@@ -65,10 +65,13 @@ $expandedheight: 800px;
     to { opacity: 0%; }
 }
 
+
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     position: relative;
-    animation-name: fadein-fancy;
-    animation-duration: 1s;
     background-image: url(./img/background-photo.jpeg);
     background-attachment: fixed;
     background-size: cover;
@@ -108,21 +111,27 @@ footer {
     position: relative;
     bottom: 0;
     max-width: $itemwidth;
-    background-position: top;
-    background-repeat: no-repeat;
-    background-color: black;
     color: white;
     background-color: white;
-    overflow: hidden;
-    flex: 0 0 100%;
     scroll-snap-align: start;
-    border-radius: 5px;
     margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.50);
     transition: height 0.5s, bottom 0.5s;
     scroll-snap-align: center;
+    animation-name: fadein-fancy;
+    animation-duration: 1s;
+}
+
+.item-inner {
+    width: 100%;
+    height: 100%;
+    outline: solid black 2px;
+    outline-offset: -2px;
+    overflow: hidden;
+    background-position: top;
+    background-repeat: no-repeat;
 }
 
 .card {
@@ -139,6 +148,8 @@ footer {
     min-height: $cardheight;
     text-align: center;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.50);
+    animation-name: fadein-fancy;
+    animation-duration: 1s;
 }
 
 .icon {
@@ -148,11 +159,15 @@ footer {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
 .decor {
     position: absolute;
     z-index: -1;
+    pointer-events: none;
 }
-
+.item .decor {
+    z-index: 3;
+}
 .decor.bl {
     bottom: -44px;
     left: -64px;
@@ -193,6 +208,9 @@ h1 {
     color: white;
     text-align: center;
     text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.50);
+    animation-name: fadein-fancy;
+    animation-duration: 1s;
+    position: relative;
 }
 
 .card p {
@@ -236,7 +254,7 @@ button {
     position: relative;
     z-index: 3;
     top: $itemheight - $dropdownheight;
-    background-color: rgba(0, 0, 0, 0.719);  
+    background-color: black; 
     //backdrop-filter: blur(5px);
     transition: opacity 0.5s, top 0.5s, transform 0.5s;
 }
@@ -246,7 +264,7 @@ button {
 }
 
 .toggle img {
-    transform: rotate(180deg);
+    transform: rotate(0deg);
     opacity: 50%;
     position: relative;
     height: $dropdownheight;
@@ -256,7 +274,7 @@ button {
 }
 
 .active .toggle img {
-    transform: rotate(0deg);
+    transform: rotate(180deg);
 }
 
 .toggle:hover img {
@@ -348,17 +366,15 @@ button {
     height: $descheight;
     margin-left: auto;
     margin-right: auto;
-    max-width: 800px;
     padding-left: 20px;
     padding-right: 20px;
     position: relative;
-    top: $expandedheight - $descheight - $dropdownheight * 2 - 20px;
+    top: $expandedheight - $descheight - $dropdownheight * 2;
     left: 0;
     z-index: 2;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.719);  
     //backdrop-filter: blur(5px);
-    border-radius: 5px;
 
 } 
 
