--- a/public/index.css
+++ b/public/index.css
@@ -3,27 +3,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
 @media (min-width: 320px) {
   .item.active {
-    height: 575px;
-  }
-
-  .item.inactive {
-    height: 115px;
-  }
-
-  .toggle {
-    top: 75px;
-  }
-
-  .active .toggle {
-    top: 535px;
-  }
-
-  .content {
-    top: 195px;
-  }
-}
-@media (min-width: 480px) {
-  .item.active {
     height: 600px;
   }
 
@@ -41,6 +20,41 @@
 
   .content {
     top: 220px;
+  }
+
+  p {
+    font-size: 14px;
+  }
+
+  .icon {
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+
+  h1 {
+    margin-bottom: 30px;
+    margin-top: 60px;
+  }
+}
+@media (min-width: 480px) {
+  .item.active {
+    height: 620px;
+  }
+
+  .item.inactive {
+    height: 160px;
+  }
+
+  .toggle {
+    top: 120px;
+  }
+
+  .active .toggle {
+    top: 580px;
+  }
+
+  .content {
+    top: 240px;
   }
 }
 @media (min-width: 600px) {
@@ -62,6 +76,20 @@
 
   .content {
     top: 320px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+
+  .icon {
+    margin-bottom: 20px;
+    margin-top: 20px;
+  }
+
+  h1 {
+    margin-bottom: 40px;
+    margin-top: 80px;
   }
 }
 .canvaswrapper {
@@ -281,8 +309,6 @@ footer {
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 .decor {
@@ -336,8 +362,6 @@ footer {
 }
 
 h1 {
-  margin-top: 80px;
-  margin-bottom: 40px;
   color: white;
   text-align: center;
   text-shadow: 0px 5px 5px rgba(0, 0, 0, 0.5);
@@ -356,7 +380,7 @@ h1 {
 
 .card h2 {
   margin: 0px 0px 0px 0px;
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 .item p {
